8210596: jshell does not support raw string literals
Reviewed-by: jlahoda, jlaskey